apple buuton error chechk

--- a/limbo/affiliate/templates/mobile/apple/11 pro max/11 pro max.html
+++ b/limbo/affiliate/templates/mobile/apple/11 pro max/11 pro max.html
@@ -3,14 +3,14 @@
 {% block key%}<meta name="keywords" content="apple 11 pro max, iphone 11 pro max, apple 11 pro max review, , iphone 11 pro max specification, iphone 11 pro max price in india, apple mobile phones youtube review"> {% endblock key%}
   {% load static %}
   {% block style %}
-    <style>
-      .info{
-        padding-top: 10px;
-      }
-      .info span{
-        color:red;
-      }
-     </style>
+  <style>
+    .info{
+      padding-top: 10px;
+    }
+    .info span{
+      color:red;
+    }
+   </style>
    {% endblock style %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
     {% block title%}Apple 11Pro Max Full specification: hipein.com{% endblock title%}
@@ -33,9 +33,13 @@
             <p class="content">Apple <span>iPhone 11 pro max</span> iOS 13, upgradable to iOS 13.5 and packs 64GB of inbuilt storage. The Apple iPhone 11 pro max is a single SIM or Dual SIM (GSM) smartphone that accepts a Nano-SIM card. The Apple iPhone 11 pro max measures 1158 x 77.8 x 8.1 mm (height x width x thickness) and weighs 226 grams. It was launched in Space Gray, Silver, Gold, Midnight Green (matte colors).</p>
             <p class="content">As far as the cameras are concerned, the Apple iPhone 11 pro max on the rear packs 12-megapixel camera and 12-megapixel selfies camera</p>
             <p class="content">Connectivity options on the Apple iPhone 11 pro max include Wi-Fi, GPS, Bluetooth v5.0, NFC, 3G, and 4G. Sensors on the phone include Face ID, accelerometer, ambient light sensor, gyroscope, proximity sensor, and compass/ magnetometer.</p>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-              <a href="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
             <p></p>
         </div>
