--- a/limbo/affiliate/templates/mobile/apple/11/11.html
+++ b/limbo/affiliate/templates/mobile/apple/11/11.html
@@ -20,9 +20,13 @@
         <div class="info">
           <h4 class="content">About Iphone 11</h4>
           <p class="content">Iphone 11 smartphone comes with the 6.1-inch full HD (828*1792 pixels) resolution with Liquid Retina IPS LCD capacitive display. The Iphone 11 is powered by the Hexa-core 2.65 GHz and Apple A13 Bionic (7 nm+) chipset paired with 64GB 4GB RAM, 128GB 4GB RAM and 256GB 4GB RAM.IIt has Gorilla glass at the both sides front as well as back with aluminium frame body. The Iphone 11 comes with the dual camera setup 12MP wide angle and standard camera and 12MP ultrawide camera. It comes 12MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by Non-removable 3100mah battery which support fast charging 18W. It comes with only Face ID unlock feature which is the only sensor to unlock the phone and it supports 4G LTE network.It runs on iOS 13, upgradable to iOS 13.5.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Apple-iPhone-11-64GB-White/dp/B07XVMCLP7/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11&qid=1594878997&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEyVEpYRTBCNzNEQ1VOJmVuY3J5cHRlZElkPUEwNzQ5MDczSzUzRFM4NzJRVEdJJmVuY3J5cHRlZEFkSWQ9QTAxNDA3MDNMT1pUSjNFN0I5UDImd2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-            <a href="https://www.amazon.in/s?k=Apple+11&ref=nb_sb_noss" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Apple-iPhone-11-64GB-White/dp/B07XVMCLP7/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11&qid=1594878997&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEyVEpYRTBCNzNEQ1VOJmVuY3J5cHRlZElkPUEwNzQ5MDczSzUzRFM4NzJRVEdJJmVuY3J5cHRlZEFkSWQ9QTAxNDA3MDNMT1pUSjNFN0I5UDImd2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/s?k=Apple+11&ref=nb_sb_noss" class="affilated-link_flipcart">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
         </div>
@@ -318,5 +322,6 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
+</div>
     {% endblock specs%}
