--- a/limbo/affiliate/templates/mobile/apple/6s/6s.html
+++ b/limbo/affiliate/templates/mobile/apple/6s/6s.html
@@ -20,9 +20,13 @@
           <h4 class="content">About Iphone 6s</h4>
           <p class="content">Iphone 6S smartphone comes with the 4.7-inch HD (750*1334 pixels) IPS LCD capacitive display. The Iphone 6S is powered by the Dual-core 1.84 GHz Twister and Apple A9 (14 nm) chipset paired with 16GB 2GB RAM, 32GB 2GB RAM, 64GB 2GB RAM and 128GB 2GB RAM.It has Gorilla glass at the front side of the body and at the rear aluminium body. The Iphone 6S comes with the single camera setup 12MP standard camera. It comes 5MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by Non-removable 1715mah battery which does not support fast charging. It comes with fingerprint sensor which is mounted at the front which make easier to user to unlock the phone and it supports 4G LTE network.It runs on iOS 9, upgradable to iOS 13.5.</p>
           <p></p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/apple-iphone-6s-space-grey-32-gb/p/itmen2yyjfzpspyg?pid=MOBEN2YYKU9386TQ&lid=LSTMOBEN2YYKU9386TQFZWR3C&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=db9728bc-df0f-4dc8-8c2f-341a008cdaac.MOBEN2YYKU9386TQ.SEARCH&ppt=sp&ppn=sp&ssid=yhhgxm0dz40000001594879820900&qH=6a4fa6f1ee635be9" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form flipkart</button></a>
-            <a href="https://www.flipkart.com/search?q=iphone%206s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/apple-iphone-6s-space-grey-32-gb/p/itmen2yyjfzpspyg?pid=MOBEN2YYKU9386TQ&lid=LSTMOBEN2YYKU9386TQFZWR3C&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=db9728bc-df0f-4dc8-8c2f-341a008cdaac.MOBEN2YYKU9386TQ.SEARCH&ppt=sp&ppn=sp&ssid=yhhgxm0dz40000001594879820900&qH=6a4fa6f1ee635be9">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/search?q=iphone%206s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
         </div>
@@ -310,6 +314,7 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
+</div>
     <!-- 13 -->
 {% endblock specs%}
