--- a/limbo/affiliate/templates/mobile/apple/7/7.html
+++ b/limbo/affiliate/templates/mobile/apple/7/7.html
@@ -20,9 +20,13 @@
         <div class="info">
           <h4 class="content">About Iphone 7</h4>
           <p class="content">Iphone 7 smartphone comes with the 4.7-inch HD (750*1334 pixels) Retina IPS LCD capacitive display. The Iphone 7 is powered by the Quad-core 2.34 GHz and Apple A10 Fusion (16 nm) chipset paired with 32GB 2GB RAM, 128GB 2GB RAM and 256GB 2GB RAM.It has Gorilla glass at the front side of the body and at the rear aluminium frame body. The Iphone 7 comes with the single camera setup 12MP standard camera. It comes 7MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by Non-removable 1960mah battery which does not support fast charging. It comes with fingerprint sensor which is mounted at the front which make easier to user to unlock the phone and it supports 4G LTE network.It runs on iOS 10.0.1, upgradable to iOS 13.5.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/apple-iphone-7-black-32-gb/p/itmen6daftcqwzeg?pid=MOBEMK62PN2HU7EE&lid=LSTMOBEMK62PN2HU7EEF7TO4A&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=0ed476e3-1c36-42b3-94e9-a0df86642344.MOBEMK62PN2HU7EE.SEARCH&ppt=sp&ppn=sp&ssid=ypzwk46rpc0000001594879572356&qH=8a650ef60fa6e469" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form flipkart</button></a>
-            <a href="https://www.flipkart.com/search?q=Apple%207&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/apple-iphone-7-black-32-gb/p/itmen6daftcqwzeg?pid=MOBEMK62PN2HU7EE&lid=LSTMOBEMK62PN2HU7EEF7TO4A&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=0ed476e3-1c36-42b3-94e9-a0df86642344.MOBEMK62PN2HU7EE.SEARCH&ppt=sp&ppn=sp&ssid=ypzwk46rpc0000001594879572356&qH=8a650ef60fa6e469">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/search?q=Apple%207&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
         </div>
@@ -298,6 +302,7 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
+</div>
     <!-- 13 -->
 {% endblock specs%}
