--- a/limbo/affiliate/templates/mobile/apple/8/8.html
+++ b/limbo/affiliate/templates/mobile/apple/8/8.html
@@ -20,9 +20,13 @@
         <div class="info">
           <h4 class="content">About Iphone 8</h4>
           <p>Iphone 8 smartphone comes with the 4.7-inch HD (750*1334 pixels) resolution with Retina IPS LCD capacitive display. The Iphone 8 is powered by the Hexa-core and Apple A11 Bionic (10 nm) chipset paired with 64GB 2GB RAM and 256GB 2GB RAM.It has Gorilla glass at the both sides front as well as back with aluminium frame body. The Iphone 8 comes with the single camera setup 12MP standard camera. It comes 7MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by Non-removable 1821mah battery which support fast charging 15W. It comes with fingerprint sensor which is mounted at the front which make easier to user to unlock the phone and it supports 4G LTE network.It runs on iOS 11, upgradable to iOS 13.5.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/apple-iphone-8-product-red-red-64-gb/p/itmf46h3trwpjcum?pid=MOBF46H3HGWSFGGC&lid=LSTMOBF46H3HGWSFGGCJFSRCX&marketplace=FLIPKART&sattr[]=storage&st=storage&otracker=search" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form flipkart</button></a>
-            <a href="https://www.flipkart.com/apple-iphone-8-product-red-red-64-gb/p/itmf46h3trwpjcum?pid=MOBF46H3HGWSFGGC&lid=LSTMOBF46H3HGWSFGGCJFSRCX&marketplace=FLIPKART&sattr[]=storage&st=storage&otracker=search" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/apple-iphone-8-product-red-red-64-gb/p/itmf46h3trwpjcum?pid=MOBF46H3HGWSFGGC&lid=LSTMOBF46H3HGWSFGGCJFSRCX&marketplace=FLIPKART&sattr[]=storage&st=storage&otracker=search">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/apple-iphone-8-product-red-red-64-gb/p/itmf46h3trwpjcum?pid=MOBF46H3HGWSFGGC&lid=LSTMOBF46H3HGWSFGGCJFSRCX&marketplace=FLIPKART&sattr[]=storage&st=storage&otracker=search">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
         </div>
@@ -314,6 +318,7 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
+</div>
     <!-- 13 -->
     {% endblock specs%}
