--- a/limbo/affiliate/templates/mobile/apple/7 plus/7plus.html
+++ b/limbo/affiliate/templates/mobile/apple/7 plus/7plus.html
@@ -20,9 +20,13 @@
         <div class="info" class="content">
           <h4>About Iphone 7 Plus</h4>
           <p>Iphone 7 Plus smartphone comes with the 5.5-inch full HD (1080*1920 pixels) resolution with Retina IPS LCD capacitive display. The Iphone 7 Plus is powered by the Quad-core 2.34 GHz and Apple A10 Fusion (16 nm) chipset paired with 32GB 3GB RAM, 128GB 3GB RAM and 256GB 3GB RAM.It has Gorilla glass at the front side of the body and at the rear aluminium frame body. The Iphone 7 Plus comes with the dual camera setup 12MP wide angle and standard camera and 12MP telephoto camera. It comes 7MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by Non-removable 2900mah battery which does not support fast charging. It comes with fingerprint sensor which is mounted at the front which make easier to user to unlock the phone and it supports 4G LTE network.It runs on iOS 10.0.1, upgradable to iOS 13.5.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Apple-iPhone-Plus-Rose-128GB/dp/B01LXMHIOY/ref=sr_1_1?dchild=1&keywords=Apple+iphone+7+Plus&qid=1594879323&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy form amazon</button></a>
-            <a href="https://www.amazon.in/Apple-iPhone-Plus-Rose-128GB/dp/B01LXMHIOY/ref=sr_1_1?dchild=1&keywords=Apple+iphone+7+Plus&qid=1594879323&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Apple-iPhone-Plus-Rose-128GB/dp/B01LXMHIOY/ref=sr_1_1?dchild=1&keywords=Apple+iphone+7+Plus&qid=1594879323&sr=8-1" class="affilated-link_amazon">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Apple-iPhone-Plus-Rose-128GB/dp/B01LXMHIOY/ref=sr_1_1?dchild=1&keywords=Apple+iphone+7+Plus&qid=1594879323&sr=8-1" class="affilated-link_flipcart">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
           <p></p>
         </div>
@@ -302,6 +306,7 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
+</div>
     <!-- 13 -->
     {% endblock specs%}
